ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    # - host: home.lab
    #   http:
    #     paths:
    #       - {
    #           path: /,
    #           pathType: Prefix,
    #           backend: { service: { name: glance, port: { number: 8080 } } },
    #         }
    # - host: sonarr.home.lab
    #   http:
    #     paths:
    #       - {
    #           path: /,
    #           pathType: Prefix,
    #           backend: { service: { name: sonarr, port: { number: 8989 } } },
    #         }
    # - host: radarr.home.lab
    #   http:
    #     paths:
    #       - {
    #           path: /,
    #           pathType: Prefix,
    #           backend: { service: { name: radarr, port: { number: 7878 } } },
    #         }
    # - host: prowlarr.home.lab
    #   http:
    #     paths:
    #       - {
    #           path: /,
    #           pathType: Prefix,
    #           backend: { service: { name: prowlarr, port: { number: 9696 } } },
    #         }
    - host: qbittorrent.h18s.lab
      http:
        paths:
          - {
              path: /,
              pathType: Prefix,
              backend:
                { service: { name: qbittorrent, port: { number: 8080 } } },
            }
    # - host: seerr.home.lab
    #   http:
    #     paths:
    #       - {
    #           path: /,
    #           pathType: Prefix,
    #           backend: { service: { name: seerr, port: { number: 5055 } } },
    #         }
    # - host: jellyfin.home.lab
    #   http:
    #     paths:
    #       - {
    #           path: /,
    #           pathType: Prefix,
    #           backend: { service: { name: jellyfin, port: { number: 8096 } } },
    #         }
